fixed bug causing overflow on right and bottom on touch devices

--- a/app/globals.css
+++ b/app/globals.css
@@ -47,6 +47,7 @@ body::-webkit-scrollbar {
 /* Hide scrollbar for IE, Edge and Firefox */
 html,
 body {
+  overflow-x: hidden;
   -ms-overflow-style: none;
   /* IE and Edge */
   scrollbar-width: none;
